tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_brace_next_file_no_active_file_does_not_stick.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 11,
    active_file: None,
    tree_visible: true,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "File 2/3 · b.rs",
    full_context: false,
}
