tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_brace_prev_file_no_active_stuck_cursor.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: None,
    tree_visible: false,
    visual_anchor: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "File 1/3 · a.rs",
    full_context: false,
}
