tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_brace_shows_file_status_message.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 11,
    active_file: None,
    tree_visible: false,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "File 2/3 · b.rs",
    full_context: false,
}
