tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_bracket_full_context_all_context_file_advances_to_next_file.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 30,
    active_file: Some(
        1,
    ),
    tree_visible: false,
    visual_anchor: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "Next file",
    full_context: true,
}
