tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_bracket_full_context_single_file_navigates_changes.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 7,
    top_line: 0,
    active_file: Some(
        0,
    ),
    tree_visible: true,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "Change 1/2 · a.rs",
    full_context: true,
}
