tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_bracket_next_hunk_at_last_is_noop.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 76,
    top_line: 0,
    active_file: None,
    tree_visible: false,
    visual_anchor: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "",
    full_context: false,
}
