tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_bracket_next_hunk_cross_file_boundary.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 16,
    active_file: None,
    tree_visible: false,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "Hunk 3/6 · b.rs",
    full_context: false,
}
